valve.output
Terminals unused in grammar

   INPUTS
   OUTPUTS
   COMMA
   BANG
   VAR_METHOD
   CONST_FLOAT


Grammar

    0 $accept: program $end

    1 program: patternActionList

    2 patternActionList: /* empty */
    3                  | patternActionList statementIf

    4 statementList: /* empty */
    5              | statementList statement

    6 statement: statementAssign
    7          | arrayDefine

    8 statementIf: IF LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE
    9            | IF LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE ELSE LBRACE statementList RBRACE

   10 statementAssign: VAR EQUAL arithmeticExpression SEMI
   11                | VAR LBRACKET arithmeticExpression RBRACKET EQUAL arithmeticExpression SEMI

   12 arithmeticExpression: LPAREN arithmeticExpression RPAREN
   13                     | arithmeticExpression PLUS arithmeticExpression
   14                     | arithmeticExpression MINUS arithmeticExpression
   15                     | arithmeticExpression MULT arithmeticExpression
   16                     | arithmeticExpression DIV arithmeticExpression
   17                     | arithmeticExpression XOR arithmeticExpression
   18                     | arithmeticExpression AND arithmeticExpression
   19                     | arithmeticExpression OR arithmeticExpression
   20                     | arithmeticExpression TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression NEQ arithmeticExpression
   22                     | arithmeticExpression GEQ arithmeticExpression
   23                     | arithmeticExpression LEQ arithmeticExpression
   24                     | arithmeticExpression GTR arithmeticExpression
   25                     | arithmeticExpression LSS arithmeticExpression
   26                     | VAR
   27                     | CONST
   28                     | VAR LBRACKET arithmeticExpression RBRACKET

   29 arrayDefine: ARRAYDEFINE VAR LBRACKET CONST RBRACKET SEMI


Terminals, with rules where they appear

$end (0) 0
error (256)
INPUTS (258)
OUTPUTS (259)
COMMA (260)
BANG (261)
EQUAL (262) 10 11
LBRACE (263) 8 9
RBRACE (264) 8 9
ARRAYDEFINE (265) 29
IF (266) 8 9
ELSE (267) 9
VAR (268) 10 11 26 28 29
VAR_METHOD (269)
CONST (270) 27 29
CONST_FLOAT (271)
OR (272) 19
AND (273) 18
LSS (274) 25
GTR (275) 24
NEQ (276) 21
LEQ (277) 23
GEQ (278) 22
TEST_FOR_EQUAL (279) 20
LPAREN (280) 8 9 12
MINUS (281) 14
PLUS (282) 13
XOR (283) 17
DIV (284) 16
MULT (285) 15
LBRACKET (286) 11 28 29
RBRACKET (287) 11 28 29
RPAREN (288) 8 9 12
SEMI (289) 10 11 29


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
patternActionList (37)
    on left: 2 3, on right: 1 3
statementList (38)
    on left: 4 5, on right: 5 8 9
statement (39)
    on left: 6 7, on right: 5
statementIf (40)
    on left: 8 9, on right: 3
statementAssign (41)
    on left: 10 11, on right: 6
arithmeticExpression (42)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 28
arrayDefine (43)
    on left: 29, on right: 7


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (patternActionList)

    program            go to state 1
    patternActionList  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: patternActionList .
    3 patternActionList: patternActionList . statementIf

    IF  shift, and go to state 4

    $default  reduce using rule 1 (program)

    statementIf  go to state 5


state 3

    0 $accept: program $end .

    $default  accept


state 4

    8 statementIf: IF . LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE
    9            | IF . LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE ELSE LBRACE statementList RBRACE

    LPAREN  shift, and go to state 6


state 5

    3 patternActionList: patternActionList statementIf .

    $default  reduce using rule 3 (patternActionList)


state 6

    8 statementIf: IF LPAREN . arithmeticExpression RPAREN LBRACE statementList RBRACE
    9            | IF LPAREN . arithmeticExpression RPAREN LBRACE statementList RBRACE ELSE LBRACE statementList RBRACE

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 10


state 7

   26 arithmeticExpression: VAR .
   28                     | VAR . LBRACKET arithmeticExpression RBRACKET

    LBRACKET  shift, and go to state 11

    $default  reduce using rule 26 (arithmeticExpression)


state 8

   27 arithmeticExpression: CONST .

    $default  reduce using rule 27 (arithmeticExpression)


state 9

   12 arithmeticExpression: LPAREN . arithmeticExpression RPAREN

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 12


state 10

    8 statementIf: IF LPAREN arithmeticExpression . RPAREN LBRACE statementList RBRACE
    9            | IF LPAREN arithmeticExpression . RPAREN LBRACE statementList RBRACE ELSE LBRACE statementList RBRACE
   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    OR              shift, and go to state 13
    AND             shift, and go to state 14
    LSS             shift, and go to state 15
    GTR             shift, and go to state 16
    NEQ             shift, and go to state 17
    LEQ             shift, and go to state 18
    GEQ             shift, and go to state 19
    TEST_FOR_EQUAL  shift, and go to state 20
    MINUS           shift, and go to state 21
    PLUS            shift, and go to state 22
    XOR             shift, and go to state 23
    DIV             shift, and go to state 24
    MULT            shift, and go to state 25
    RPAREN          shift, and go to state 26


state 11

   28 arithmeticExpression: VAR LBRACKET . arithmeticExpression RBRACKET

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 27


state 12

   12 arithmeticExpression: LPAREN arithmeticExpression . RPAREN
   13                     | arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    OR              shift, and go to state 13
    AND             shift, and go to state 14
    LSS             shift, and go to state 15
    GTR             shift, and go to state 16
    NEQ             shift, and go to state 17
    LEQ             shift, and go to state 18
    GEQ             shift, and go to state 19
    TEST_FOR_EQUAL  shift, and go to state 20
    MINUS           shift, and go to state 21
    PLUS            shift, and go to state 22
    XOR             shift, and go to state 23
    DIV             shift, and go to state 24
    MULT            shift, and go to state 25
    RPAREN          shift, and go to state 28


state 13

   19 arithmeticExpression: arithmeticExpression OR . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 29


state 14

   18 arithmeticExpression: arithmeticExpression AND . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 30


state 15

   25 arithmeticExpression: arithmeticExpression LSS . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 31


state 16

   24 arithmeticExpression: arithmeticExpression GTR . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 32


state 17

   21 arithmeticExpression: arithmeticExpression NEQ . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 33


state 18

   23 arithmeticExpression: arithmeticExpression LEQ . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 34


state 19

   22 arithmeticExpression: arithmeticExpression GEQ . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 35


state 20

   20 arithmeticExpression: arithmeticExpression TEST_FOR_EQUAL . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 36


state 21

   14 arithmeticExpression: arithmeticExpression MINUS . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 37


state 22

   13 arithmeticExpression: arithmeticExpression PLUS . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 38


state 23

   17 arithmeticExpression: arithmeticExpression XOR . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 39


state 24

   16 arithmeticExpression: arithmeticExpression DIV . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 40


state 25

   15 arithmeticExpression: arithmeticExpression MULT . arithmeticExpression

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 41


state 26

    8 statementIf: IF LPAREN arithmeticExpression RPAREN . LBRACE statementList RBRACE
    9            | IF LPAREN arithmeticExpression RPAREN . LBRACE statementList RBRACE ELSE LBRACE statementList RBRACE

    LBRACE  shift, and go to state 42


state 27

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression
   28                     | VAR LBRACKET arithmeticExpression . RBRACKET

    OR              shift, and go to state 13
    AND             shift, and go to state 14
    LSS             shift, and go to state 15
    GTR             shift, and go to state 16
    NEQ             shift, and go to state 17
    LEQ             shift, and go to state 18
    GEQ             shift, and go to state 19
    TEST_FOR_EQUAL  shift, and go to state 20
    MINUS           shift, and go to state 21
    PLUS            shift, and go to state 22
    XOR             shift, and go to state 23
    DIV             shift, and go to state 24
    MULT            shift, and go to state 25
    RBRACKET        shift, and go to state 43


state 28

   12 arithmeticExpression: LPAREN arithmeticExpression RPAREN .

    $default  reduce using rule 12 (arithmeticExpression)


state 29

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   19                     | arithmeticExpression OR arithmeticExpression .
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    LSS             shift, and go to state 15
    GTR             shift, and go to state 16
    NEQ             shift, and go to state 17
    LEQ             shift, and go to state 18
    GEQ             shift, and go to state 19
    TEST_FOR_EQUAL  shift, and go to state 20
    MINUS           shift, and go to state 21
    PLUS            shift, and go to state 22
    XOR             shift, and go to state 23
    DIV             shift, and go to state 24
    MULT            shift, and go to state 25

    $default  reduce using rule 19 (arithmeticExpression)


state 30

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   18                     | arithmeticExpression AND arithmeticExpression .
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    LSS             shift, and go to state 15
    GTR             shift, and go to state 16
    NEQ             shift, and go to state 17
    LEQ             shift, and go to state 18
    GEQ             shift, and go to state 19
    TEST_FOR_EQUAL  shift, and go to state 20
    MINUS           shift, and go to state 21
    PLUS            shift, and go to state 22
    XOR             shift, and go to state 23
    DIV             shift, and go to state 24
    MULT            shift, and go to state 25

    $default  reduce using rule 18 (arithmeticExpression)


state 31

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression
   25                     | arithmeticExpression LSS arithmeticExpression .

    MINUS  shift, and go to state 21
    PLUS   shift, and go to state 22
    XOR    shift, and go to state 23
    DIV    shift, and go to state 24
    MULT   shift, and go to state 25

    $default  reduce using rule 25 (arithmeticExpression)


state 32

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   24                     | arithmeticExpression GTR arithmeticExpression .
   25                     | arithmeticExpression . LSS arithmeticExpression

    MINUS  shift, and go to state 21
    PLUS   shift, and go to state 22
    XOR    shift, and go to state 23
    DIV    shift, and go to state 24
    MULT   shift, and go to state 25

    $default  reduce using rule 24 (arithmeticExpression)


state 33

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   21                     | arithmeticExpression NEQ arithmeticExpression .
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    MINUS  shift, and go to state 21
    PLUS   shift, and go to state 22
    XOR    shift, and go to state 23
    DIV    shift, and go to state 24
    MULT   shift, and go to state 25

    $default  reduce using rule 21 (arithmeticExpression)


state 34

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   23                     | arithmeticExpression LEQ arithmeticExpression .
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    MINUS  shift, and go to state 21
    PLUS   shift, and go to state 22
    XOR    shift, and go to state 23
    DIV    shift, and go to state 24
    MULT   shift, and go to state 25

    $default  reduce using rule 23 (arithmeticExpression)


state 35

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   22                     | arithmeticExpression GEQ arithmeticExpression .
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    MINUS  shift, and go to state 21
    PLUS   shift, and go to state 22
    XOR    shift, and go to state 23
    DIV    shift, and go to state 24
    MULT   shift, and go to state 25

    $default  reduce using rule 22 (arithmeticExpression)


state 36

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   20                     | arithmeticExpression TEST_FOR_EQUAL arithmeticExpression .
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    MINUS  shift, and go to state 21
    PLUS   shift, and go to state 22
    XOR    shift, and go to state 23
    DIV    shift, and go to state 24
    MULT   shift, and go to state 25

    $default  reduce using rule 20 (arithmeticExpression)


state 37

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   14                     | arithmeticExpression MINUS arithmeticExpression .
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    XOR   shift, and go to state 23
    DIV   shift, and go to state 24
    MULT  shift, and go to state 25

    $default  reduce using rule 14 (arithmeticExpression)


state 38

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   13                     | arithmeticExpression PLUS arithmeticExpression .
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    XOR   shift, and go to state 23
    DIV   shift, and go to state 24
    MULT  shift, and go to state 25

    $default  reduce using rule 13 (arithmeticExpression)


state 39

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   17                     | arithmeticExpression XOR arithmeticExpression .
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    DIV   shift, and go to state 24
    MULT  shift, and go to state 25

    $default  reduce using rule 17 (arithmeticExpression)


state 40

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   16                     | arithmeticExpression DIV arithmeticExpression .
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    $default  reduce using rule 16 (arithmeticExpression)


state 41

   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   15                     | arithmeticExpression MULT arithmeticExpression .
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    $default  reduce using rule 15 (arithmeticExpression)


state 42

    8 statementIf: IF LPAREN arithmeticExpression RPAREN LBRACE . statementList RBRACE
    9            | IF LPAREN arithmeticExpression RPAREN LBRACE . statementList RBRACE ELSE LBRACE statementList RBRACE

    $default  reduce using rule 4 (statementList)

    statementList  go to state 44


state 43

   28 arithmeticExpression: VAR LBRACKET arithmeticExpression RBRACKET .

    $default  reduce using rule 28 (arithmeticExpression)


state 44

    5 statementList: statementList . statement
    8 statementIf: IF LPAREN arithmeticExpression RPAREN LBRACE statementList . RBRACE
    9            | IF LPAREN arithmeticExpression RPAREN LBRACE statementList . RBRACE ELSE LBRACE statementList RBRACE

    RBRACE       shift, and go to state 45
    ARRAYDEFINE  shift, and go to state 46
    VAR          shift, and go to state 47

    statement        go to state 48
    statementAssign  go to state 49
    arrayDefine      go to state 50


state 45

    8 statementIf: IF LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE .
    9            | IF LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE . ELSE LBRACE statementList RBRACE

    ELSE  shift, and go to state 51

    $default  reduce using rule 8 (statementIf)


state 46

   29 arrayDefine: ARRAYDEFINE . VAR LBRACKET CONST RBRACKET SEMI

    VAR  shift, and go to state 52


state 47

   10 statementAssign: VAR . EQUAL arithmeticExpression SEMI
   11                | VAR . LBRACKET arithmeticExpression RBRACKET EQUAL arithmeticExpression SEMI

    EQUAL     shift, and go to state 53
    LBRACKET  shift, and go to state 54


state 48

    5 statementList: statementList statement .

    $default  reduce using rule 5 (statementList)


state 49

    6 statement: statementAssign .

    $default  reduce using rule 6 (statement)


state 50

    7 statement: arrayDefine .

    $default  reduce using rule 7 (statement)


state 51

    9 statementIf: IF LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE ELSE . LBRACE statementList RBRACE

    LBRACE  shift, and go to state 55


state 52

   29 arrayDefine: ARRAYDEFINE VAR . LBRACKET CONST RBRACKET SEMI

    LBRACKET  shift, and go to state 56


state 53

   10 statementAssign: VAR EQUAL . arithmeticExpression SEMI

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 57


state 54

   11 statementAssign: VAR LBRACKET . arithmeticExpression RBRACKET EQUAL arithmeticExpression SEMI

    VAR     shift, and go to state 7
    CONST   shift, and go to state 8
    LPAREN  shift, and go to state 9

    arithmeticExpression  go to state 58


state 55

    9 statementIf: IF LPAREN arithmeticExpression RPAREN LBRACE statementList RBRACE ELSE LBRACE . statementList RBRACE

    $default  reduce using rule 4 (statementList)

    statementList  go to state 59


state 56

   29 arrayDefine: ARRAYDEFINE VAR LBRACKET . CONST RBRACKET SEMI

    CONST  shift, and go to state 60


state 57

   10 statementAssign: VAR EQUAL arithmeticExpression . SEMI
   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression

    OR              shift, and go to state 13
    AND             shift, and go to state 14
    LSS             shift, and go to state 15
    GTR             shift, and go to state 16
    NEQ             shift, and go to state 17
    LEQ             shift, and go to state 18
    GEQ             shift, and go to state 19
    TEST_FOR_EQUAL  shift, and go to state 20
    MINUS           shift, and go to state 21
    PLUS            shift, and go to state 22
    XOR             shift, and go to state 23
    DIV             shift, and go to state 24
    MULT            shift, and go to state 25
    SEMI            shift, and go to state 61


state 58

   11 statementAssign: VAR LBRACKET arithmeticExpression . RBRACKET EQUAL arithmeticExpression SEMI
   13 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   14                     | arithmeticExpression . MINUS arithmeticExpression
   15                     | arithmeticExpression . MULT arithmeticExpression
   16                     | arithmeticExpression . DIV arithmeticExpression
   17                     | arithmeticExpression . XOR arithmeticExpression
   18                     | arithmeticExpression . AND arithmeticExpression
   19                     | arithmeticExpression . OR arithmeticExpression
   20                     | arithmeticExpression . TEST_FOR_EQUAL arithmeticExpression
   21                     | arithmeticExpression . NEQ arithmeticExpression
   22                     | arithmeticExpression . GEQ arithmeticExpression
   23                     | arithmeticExpression . LEQ arithmeticExpression
   24                     | arithmeticExpression . GTR arithmeticExpression
   25                     | arithmeticExpression . LSS arithmeticExpression
